samples/_failures_safe/1761594289_ad4d0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96fdd5e4.c: In function ‘bfs’:
./samples/SAFE/__tmp_96fdd5e4.c:180:21: error: ‘en’ undeclared (first use in this function)
  180 |                     en
      |                     ^~
./samples/SAFE/__tmp_96fdd5e4.c:180:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_96fdd5e4.c:180:23: error: expected ‘;’ at end of input
  180 |                     en
      |                       ^
      |                       ;
./samples/SAFE/__tmp_96fdd5e4.c:180:21: error: expected declaration or statement at end of input
  180 |                     en
      |                     ^~
./samples/SAFE/__tmp_96fdd5e4.c:180:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96fdd5e4.c:180:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96fdd5e4.c:180:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96fdd5e4.c:180:21: error: expected declaration or statement at end of input
